# llm-client-test

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: publish-to-auto-release.yml
docs/icon/: app-icon.afdesign
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: front.rs  lib.rs  llm.rs  main.rs
src-tauri/src/front/: front_types.rs  types.rs
src-tauri/src/llm/: ollama_client.rs  ollama_types.rs  types.rs
src-tauri/src/llm/ollama/: client.rs  mod.rs  ollama_api_chat.rs  ollama_api_tags.rs  types.rs
src/api/: llmClient.ts
src/api/llm/: index.ts  ollamaClient.ts
src/api/llm/ollama/: requestApiChat.ts  requestApiTags.ts
src/components/ui/: ChatHistory.tsx  ChatInput.tsx  Header.tsx
src/hooks/: useAutoScroll.ts  useMessageListener.ts  useModelNames.ts
src/pages/: ChatPage.tsx
src/styles/: global.css
src/tauri/: constants.ts
src/types/: LLMApiError.ts  Message.ts  Result.ts
